# intrinsica

./: .gitignore  .pre-commit-config.yaml  README.MD  analyze_scale_laws.py  analyze_temporal.py  pyproject.toml  requirements-dev.txt  test_temporal.py
libs/: fluxica-0.1.0-py3-none-any.whl  fluxica-0.1.1-py3-none-any.whl
src/intrinseca/: __init__.py
src/intrinseca/core/: DC_FRAMEWORK.md  __init__.py  bridging.py  convergence.py  engine.py  event_detector.py  indicators.py  kernel.py  readers.py  reconciliation.py  state.py
src/intrinseca/indicators/: INDICATORS.md  __init__.py  base.py  registry.py
src/intrinseca/indicators/metrics/: __init__.py  aggregation.py  core.py  dynamics.py  geometry.py  microstructure.py
src/intrinseca/indicators/metrics/event/: __init__.py  memory.py  price.py  series.py  tick.py  time.py
src/intrinseca/indicators/metrics/summary/: __init__.py  stats.py
src/intrinseca/visualization/: __init__.py  config.py  core_plots.py  hooks.py  interactive.py  static_plots.py  utils.py
tests/: QUALITY_TEST_PLAN.md  __init__.py  test_core.py  test_engine.py  test_indicators.py  test_kernel_segmentation.py  test_reconciliation.py  test_state.py  test_visualization.py
tests/quality/: __init__.py  __main__.py  config.py  conftest.py  report.py  runner.py
tests/quality/validators/: __init__.py  base.py  collision.py  cross_day.py  determinism.py  intra_event.py  price.py  scale_laws.py  structural.py  temporal.py  threshold.py
