[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinseca"
version = "0.1.0"
description = "Motor de transformación Directional Change (DC) y análisis de eventos para trading algorítmico"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
keywords = [
    "directional-change",
    "algorithmic-trading",
    "quantitative-finance",
    "time-series",
    "market-microstructure"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed"
]

# Dependencias mínimas para live-trading (core)
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "polars>=0.20.0",
]

[project.optional-dependencies]
# Módulo de visualización
plot = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Visualización interactiva (Plotly)
interactive = [
    "plotly>=5.15.0",
]

# Todo incluido
full = [
    "intrinseca[plot,interactive]",
]

# Desarrollo
dev = [
    "intrinseca[full]",
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/intrinseca"
Documentation = "https://github.com/tu-usuario/intrinseca#readme"
Repository = "https://github.com/tu-usuario/intrinseca"
Issues = "https://github.com/tu-usuario/intrinseca/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intrinseca = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"